--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Python Actions Collection'
+name: 'Python Actions Collection - CodeCov'
 description: 'Run actions for Python Project on pull requests to improve code review experience.'
 author: 'dciborow'
 inputs:
