--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -11,8 +11,12 @@ on:
       python-version: 
         type: string
         default: 3.11.3
+      
     secrets:
       AZURE_CREDENTIALS:
+        required: false
+
+      CODECOV_TOKEN:
         required: false
 
 jobs:
@@ -33,11 +37,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: ${{ matrix.tools }}
-        uses: YaoYinYing/action-python@v7.3.1-post-2
+        uses: YaoYinYing/action-python@v7.3.1-post-3
         with:
           ${{ matrix.tools }}: true
           args: ${{ matrix.args }}
           workdir: ${{ inputs.workdir }}
           testdir: ${{ inputs.testdir }}
           python_version: ${{ inputs.python-version }}
-          codecov_token: ${{ inputs.CODECOV_TOKEN }}
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
