--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -11,13 +11,16 @@ on:
       python-version: 
         type: string
         default: 3.11.3
+
+      codecov_token:
+        type: string
+        default: ''
       
     secrets:
       AZURE_CREDENTIALS:
         required: false
 
-      CODECOV_TOKEN:
-        required: false
+      
 
 jobs:
   validation:
@@ -37,11 +40,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: ${{ matrix.tools }}
-        uses: YaoYinYing/action-python@v7.3.1-post-3
+        uses: YaoYinYing/action-python@v7.3.1-post-4
         with:
           ${{ matrix.tools }}: true
           args: ${{ matrix.args }}
           workdir: ${{ inputs.workdir }}
           testdir: ${{ inputs.testdir }}
           python_version: ${{ inputs.python-version }}
-          codecov_token: ${{ secrets.CODECOV_TOKEN }}
+          codecov_token: ${{ inputs.codecov_token }}
